# CoffeeTech_Backend

./: .env  .gitattributes  .gitignore  convertirbase64.py  dataBase.py  database.py  documentacion.txt  documentacion_seleccionada.txt  generate_docs.py  imagen_base64.txt  installed_packages.txt  main.py  pruebad.py  pruebas.py  pruebasDocuemnto.py  pyproject.toml  requirements.txt  test_db_connection.py
backend/: pyvenv.cfg
backend/Scripts/: activate  activate.bat  fixup_firestore_admin_v1_keywords.py  fixup_firestore_v1_keywords.py
coffeeTechEntorno/: pyvenv.cfg
coffeeTechEntorno/Scripts/: activate  activate.bat  fixup_firestore_admin_v1_keywords.py  fixup_firestore_v1_keywords.py
endpoints/: auth.py  collaborators.py  culturalTasks  culturalTasksSebas.py  culturalWorkTask.py  detection.py  farm.py  flowering.py  invitation.py  notification.py  plots.py  reports.py  transaction.py  utils.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
envsource/: pyvenv.cfg
models/: farm.py  models.py  role.py  role_permission.py  user.py  user_role_farm.py
modelsIA/Modelo-Deficiencias/variables/: variables.index
modelsIA/Modelo-Enfermedades/: fingerprint.pb  saved_model.pb
modelsIA/Modelo-Enfermedades/variables/: variables.data-00000-of-00001  variables.index
routes/: auth.py
test/: conftest.py  testRegister.py  test_endpoint_auth.py  test_farm_endpoints.py
utils/: FCM.py  email.py  reminder.py  response.py  security.py  status.py
(+2 files in other folders)
