[tool.poetry]
name = "coffeetech-backend"
version = "0.1.0"
description = ""
authors = ["naromu <natyrm15173444@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.4.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
bcrypt = "4.2.0"
cffi = "1.17.0"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "43.0.0"
dnspython = "2.6.1"
ecdsa = "0.19.0"
email-validator = "2.2.0"
fastapi = "0.112.1"
h11 = "0.14.0"
idna = "3.7"
motor = "3.5.1"
passlib = "1.7.4"
psycopg2-binary = "2.9.9"
pyasn1 = "0.6.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pymongo = "4.8.0"
python-dotenv = "0.19.0"
python-jose = "3.3.0"
python-multipart = "0.0.5"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.38.2"
typing-extensions = "4.12.2"
unicorn = "2.0.1.post1"
uvicorn = "0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
